@@ -2,6 +2,8 @@
 
   * doc/index.html: add deepOfix Mail Server to list of distributions
     that include runit (thx Debayan Banerjee).
+  * doc/useinit.html: update description on how to use with upstart
+    (thx Gabriel de Perthuis).
 
 2.1.1
 Sun, 04 Oct 2009 20:28:38 +0000
